Change gaps and fixed height for test elements on CompanyCard

--- a/FrontEnd/src/components/CompanyCard/CompanyCard.module.css
+++ b/FrontEnd/src/components/CompanyCard/CompanyCard.module.css
@@ -59,7 +59,7 @@
   flex-direction: column;
   align-items: flex-start;
   box-sizing: border-box;
-  gap: 16px;
+  gap: 12px;
   padding: 16px;
   border-radius: 0 0 12px 12px;
 }
@@ -68,7 +68,7 @@
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 16px;
+  gap: 12px;
 }
 
 .company-card__category-text {
@@ -81,7 +81,7 @@
   line-height: 120%;
   text-align: left;
   max-width: 262px;
-  height: 35px;
+  height: 32px;
 }
 
 .company-card__name-text {
@@ -94,6 +94,7 @@
   text-transform: uppercase;
   text-align: left;
   overflow: hidden;
+  height: 44px;
 }
 
 .company-card__region-text {
