--- a/FrontEnd/src/pages/LandingPage/Companies/Companies.module.css
+++ b/FrontEnd/src/pages/LandingPage/Companies/Companies.module.css
@@ -26,7 +26,7 @@
 .new-companies-link-to-all {
   position: absolute;
   right: 41px;
-  top: 6px
+  top: 7px
 }
 
 .new-companies-link-to-all a {
